<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_kegiatan" />
        <item
            android:id="@+id/nav_jadwal"
            android:icon="@drawable/ic_penimbangan"
            android:title="@string/menu_jadwal" />
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_input" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_keluar" />
    </group>
</menu>