<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_daftar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_listBS" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gabung" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_masuk" />
    </group>

</menu>
